<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/darker_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/second">
        <Button
            android:id="@+id/button_7"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/first"
            app:layout_constraintBottom_toTopOf="@+id/button_4"
            android:text="@string/_7"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/button_4"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_7"
            app:layout_constraintBottom_toTopOf="@+id/button_1"
            android:text="@string/_4"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/button_1"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_4"
            app:layout_constraintBottom_toTopOf="@+id/button_dot"
            android:text="@string/_1"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/button_dot"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_1"
            app:layout_constraintBottom_toBottomOf="@+id/first"
            android:text="@string/dot"
            android:textSize="32sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/first"
        app:layout_constraintRight_toLeftOf="@+id/third">
        <Button
            android:id="@+id/button_8"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/second"
            app:layout_constraintBottom_toTopOf="@+id/button_5"
            android:text="@string/_8"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/button_5"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_8"
            app:layout_constraintBottom_toTopOf="@+id/button_2"
            android:text="@string/_5"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/button_2"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_5"
            app:layout_constraintBottom_toTopOf="@+id/button_0"
            android:text="@string/_2"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/button_0"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_2"
            app:layout_constraintBottom_toBottomOf="@+id/second"
            android:text="@string/_0"
            android:textSize="32sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/third"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/second"
        app:layout_constraintRight_toLeftOf="@+id/fourth">
        <Button
            android:id="@+id/button_9"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/third"
            app:layout_constraintBottom_toTopOf="@+id/button_6"
            android:text="@string/_9"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/button_6"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_9"
            app:layout_constraintBottom_toTopOf="@+id/button_3"
            android:text="@string/_6"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/button_3"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_6"
            app:layout_constraintBottom_toTopOf="@+id/button_result"
            android:text="@string/_3"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/button_result"
            android:onClick="onResult"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_3"
            app:layout_constraintBottom_toBottomOf="@+id/third"
            android:text="@string/equals"
            android:textSize="32sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fourth"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/third"
        app:layout_constraintRight_toRightOf="parent">
        <Button
            android:id="@+id/button_delete"
            android:onClick="onErase"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/fourth"
            app:layout_constraintBottom_toTopOf="@+id/button_divide"
            android:text="@string/del"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/button_divide"
            android:onClick="onAction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_delete"
            app:layout_constraintBottom_toTopOf="@+id/button_multiply"
            android:text="@string/divide"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button_multiply"
            android:onClick="onAction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_divide"
            app:layout_constraintBottom_toTopOf="@+id/button_subtract"
            android:text="@string/multiply"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button_subtract"
            android:onClick="onAction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_multiply"
            app:layout_constraintBottom_toTopOf="@+id/button_product"
            android:text="@string/subtract"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button_product"
            android:onClick="onAction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_subtract"
            app:layout_constraintBottom_toBottomOf="@+id/fourth"
            android:text="@string/product"
            android:textSize="24sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>